# ai-signals

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.zh.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: briefs.py  companies.py  news.py  pipeline.py  rss.py  search.py  stats.py  topics.py  trends.py
backend/app/core/: database.py  exceptions.py  logging.py
backend/app/models/: __init__.py  brief.py  company.py  news.py  pipeline_run.py  source.py  tag.py  trend_snapshot.py
backend/app/pipeline/: base.py  runner.py
backend/app/pipeline/stages/: __init__.py  clean.py  cluster.py  collect.py  deduplicate.py  detect_trends.py  extract.py  generate_pages.py  generate_report.py  score.py  store.py  summarize.py  tag.py
backend/app/scheduler/: health.py  retry.py  worker.py
backend/app/schemas/: api.py  brief.py  common.py  news.py
backend/app/services/crawler/: __init__.py  content_extractor.py  http_client.py  rss_fetcher.py  sources.py  web_scraper.py
backend/app/services/llm/: anthropic_client.py  base.py  deepseek_client.py  factory.py  openai_client.py  openrouter_client.py
backend/app/services/scoring/: discussion.py  freshness.py  importance.py  ranker.py  trend_score.py
backend/app/services/trend/: aggregator.py  calculator.py  (+1 more)
backend/tests/: conftest.py
backend/tests/test_api/: test_routes.py
backend/tests/test_crawler/: test_content_extractor.py
backend/tests/test_llm/: test_llm_client.py
backend/tests/test_scheduler/: test_scheduler.py
backend/tests/test_scoring/: test_importance.py  test_scores.py
backend/tests/test_trend/: test_calculator.py
(+41 files in other folders)
