[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-signals-backend"
version = "1.0.0"
description = "AI Signals — automated AI industry intelligence platform"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "sqlalchemy>=2.0.29",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",          # PostgreSQL (prod)
    "alembic>=1.13.1",

    # Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",

    # HTTP / Crawling
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "readability-lxml>=0.8.1",
    "lxml>=5.2.1",

    # LLM providers
    "openai>=1.25.0",
    "anthropic>=0.26.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Logging
    "structlog>=24.1.0",
    "rich>=13.7.1",             # ConsoleRenderer colours

    # Utilities
    "python-slugify>=8.0.4",
    "tenacity>=8.3.0",          # retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = [
    "S101",   # assert in tests
    "S324",   # md5 in simhash — not cryptographic use
    "B008",   # Depends() in function default
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
